# 404cast

./: package-lock.json  package.json
.vercel/: project.json
backend/: .gitignore
backend/exploration/: pyproject.toml
backend/exploration/explore/: explore.ipynb  test.ipynb
backend/server/: .gitignore  package-lock.json  package.json  vercel.json
backend/server/api/: index.js
backend/server/api/routers/: leaderboards.js  likes.js  predictions.js  scores.js
backend/server/data/: coords_hood_map.json  kidnap_risk_scores.json  neighbourhood_risks.json
backend/server/services/: leaderboards_service.js  likes_service.js  neighbourhood_service.js  scores_service.js
frontend/: index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
frontend/dev-dist/: sw.js
frontend/public/: browserconfig.xml  manifest.json
frontend/scripts/: generate-pwa-icons.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AudioPlayer.jsx  BottomBar.jsx  Leaderboard.jsx  PWAUpdater.jsx  Sidebar.jsx  StreetView.jsx  TVStatic.jsx  TopBar.jsx  UsernameModal.jsx
frontend/src/data/: gameProgress.js
frontend/src/styles/components/: bottombar.module.css  leaderboard.module.css  sidebar.module.css  topbar.module.css  tvstatic.module.css  username-modal.module.css
