[project]
package-mode = true
name = "explore"
version = "0.1.0"
description = "Data exploration project for Hack404"
authors = [
    {name = "Your Name",email = "your.email@example.com"}
]
requires-python = "^3.9"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
